feat: phase 4 slice c
